Initial commit from migration from Windows to AWS Ubuntu Lightsale intance.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-geocode": "^1.0.0-alpha.1",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.15.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.0",
     "styled-components": "^5.3.10",
     "web-vitals": "^2.1.4"
   },
@@ -29,8 +29,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -44,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-plugin-jest": "^27.6.0"
   }
 }
