--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-geocode": "^1.0.0-alpha.1",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.15.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "styled-components": "^5.3.10",
     "web-vitals": "^2.1.4"
   },
