--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
     "react-geocode": "^1.0.0-alpha.1",
+    "react-gtm-module": "^2.0.11",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
