--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -14,6 +14,20 @@
       "providerPlugin": "awscloudformation",
       "service": "API Gateway"
     },
+    "LokisPlaygroundSubscriptionAPI": {
+      "dependsOn": [
+        {
+          "attributes": [
+            "Name",
+            "Arn"
+          ],
+          "category": "function",
+          "resourceName": "LokisPlaygroundSubscribeLambda"
+        }
+      ],
+      "providerPlugin": "awscloudformation",
+      "service": "API Gateway"
+    },
     "LokisPlaygroundUpdateProductStarsAPI": {
       "dependsOn": [
         {
@@ -61,6 +75,11 @@
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
     },
+    "LokisPlaygroundSubscribeLambda": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    },
     "LokisPlaygroundUpdateProductStarsLambda": {
       "build": true,
       "providerPlugin": "awscloudformation",
@@ -81,6 +100,22 @@
         {
           "category": "function",
           "resourceName": "LokisPlaygroundProductsLambda"
+        }
+      ]
+    },
+    "AMPLIFY_function_LokisPlaygroundSubscribeLambda_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "LokisPlaygroundSubscribeLambda"
+        }
+      ]
+    },
+    "AMPLIFY_function_LokisPlaygroundSubscribeLambda_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "LokisPlaygroundSubscribeLambda"
         }
       ]
     },
